@@ -15,8 +15,8 @@ FCGI_CHILDREN=1
 FCGI_CHROOT=
 FCGI_CHDIR=
 
-FCGI_USER=anon
-FCGI_GROUP=legion
+FCGI_USER=cable
+FCGI_GROUP=cable
 
 FCGI_EXTRA_OPTIONS="-U nginx -G nginx -M 0600"
 
