@@ -21,5 +21,7 @@ anon	liberte = NOPASSWD: /sbin/shutdown -[hr] now
 anon	liberte = NOPASSWD: /usr/local/sbin/sysrq [01]
 anon	liberte = NOPASSWD: /usr/local/sbin/otfe-resize, /usr/local/sbin/mac-randomize
 
-anon	liberte = NOPASSWD:        /usr/local/sbin/slay nofw
-anon	liberte = (nofw) NOPASSWD: /usr/local/sbin/unsafe-browser ""
+anon	liberte = NOPASSWD:         /usr/local/sbin/slay nofw
+anon	liberte = (nofw)  NOPASSWD: /usr/local/sbin/unsafe-browser ""
+
+anon	liberte = (cable) NOPASSWD: /usr/local/libexec/cable/send ""
