@@ -10,7 +10,7 @@ smtp_server=liberte
 nntp_server=
 local_mbox=/dev/null
 use_mail_command=1
-mail_command=/usr/local/libexec/cable/send
+mail_command=/home/anon/bin/wrappers/cable-send
 use_nntp_auth=0
 use_nntp_auth_onconnect=0
 user_id=anon
