@@ -7,6 +7,7 @@
 
 # Preliminary variables
 rqueue=${CABLE_QUEUES}/rqueue
+msgidre='[0-9a-f]{40}'
 
 
 # Initialization tasks
