@@ -22,11 +22,11 @@ if [ "$1" = fork ]; then
     luser=anon
     lgroup=legion
     opts_common=noatime,nosuid,nodev,noexec
-    opts_vfat=${opts_common},flush,iocharset=iso8859-1,utf8,showexec,uid=${luser},gid=${lgroup},umask=0137,dmask=067
-    opts_ntfs=${opts_common},uid=${luser},gid=${lgroup},fmask=0137,dmask=067
-    opts_ntfs_ro=${opts_common},ro,uid=${luser},gid=${lgroup},fmask=0337,dmask=0267
-    opts_iso9660=${opts_common},ro,iocharset=iso8859-1,utf8,uid=${luser},gid=${lgroup},mode=0440,dmode=0510
-    opts_udf=${opts_common},ro,iocharset=iso8859-1,uid=${luser},gid=${lgroup},umask=0337
+    opts_vfat=${opts_common},flush,iocharset=iso8859-1,utf8,showexec,uid=${luser},gid=${lgroup},umask=0177,dmask=077
+    opts_ntfs=${opts_common},uid=${luser},gid=${lgroup},fmask=0177,dmask=077
+    opts_ntfs_ro=${opts_common},ro,uid=${luser},gid=${lgroup},fmask=0377,dmask=0277
+    opts_iso9660=${opts_common},ro,iocharset=iso8859-1,utf8,uid=${luser},gid=${lgroup},mode=0400,dmode=0500
+    opts_udf=${opts_common},ro,iocharset=iso8859-1,uid=${luser},gid=${lgroup},umask=0377
     opts_ext2=${opts_common},acl,user_xattr
     opts_ext3=${opts_ext2}
     opts_ext4=${opts_ext2}
